--- a/_portfolio/Hawkes_PairsTrading.html
+++ b/_portfolio/Hawkes_PairsTrading.html
@@ -13714,7 +13714,7 @@ $( document ).ready(function(){
 
 
 <div class="output_png output_subarea ">
-<img src="output_9_1.png"
+<img src="_portfolio/output_9_1.png"
 >
 </div>
 
