--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -13725,7 +13725,7 @@ $( document ).ready(function(){
 
 
 <div class="output_png output_subarea ">
-<img src="_portfolio/output_9_1.png"
+<img src="https://hiutongyeung0829.github.io//_portfolio/output_9_1.png"
 >
 </div>
 
