--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -13852,7 +13852,7 @@ $( document ).ready(function(){
 
 
 <div class="output_png output_subarea ">
-<img src="output_12_1.png"
+<img src="https://hiutongyeung0829.github.io//images/output_12_1.png"
 >
 </div>
 
@@ -13933,7 +13933,7 @@ $( document ).ready(function(){
 
 
 <div class="output_png output_subarea ">
-<img src="output_14_1.png"
+<img src="https://hiutongyeung0829.github.io//images/output_14_1.png"
 >
 </div>
 
@@ -13991,7 +13991,7 @@ $( document ).ready(function(){
 
 
 <div class="output_png output_subarea ">
-<img src="output_15_1.png"
+<img src="https://hiutongyeung0829.github.io//images/output_15_1.png"
 >
 </div>
 
@@ -14066,7 +14066,7 @@ $( document ).ready(function(){
 
 
 <div class="output_png output_subarea ">
-<img src="output_17_1.png"
+<img src="https://hiutongyeung0829.github.io//images/output_17_1.png"
 >
 </div>
 
@@ -14168,7 +14168,7 @@ $( document ).ready(function(){
 
 
 <div class="output_png output_subarea ">
-<img src="output_20_1.png"
+<img src="https://hiutongyeung0829.github.io//images/output_20_1.png"
 >
 </div>
 
@@ -14216,7 +14216,7 @@ $( document ).ready(function(){
 
 
 <div class="output_png output_subarea ">
-<img src="output_21_1.png"
+<img src="https://hiutongyeung0829.github.io//images/output_21_1.png"
 >
 </div>
 
@@ -14452,7 +14452,7 @@ Optimization terminated successfully.
 
 
 <div class="output_png output_subarea ">
-<img src="output_24_2.png"
+<img src="https://hiutongyeung0829.github.io//images/output_24_2.png"
 >
 </div>
 
@@ -14512,7 +14512,7 @@ Optimization terminated successfully.
 
 
 <div class="output_png output_subarea ">
-<img src="output_25_2.png"
+<img src="https://hiutongyeung0829.github.io//images/output_25_2.png"
 >
 </div>
 
@@ -14607,7 +14607,7 @@ Optimization terminated successfully.
 
 
 <div class="output_png output_subarea ">
-<img src="output_27_1.png"
+<img src="https://hiutongyeung0829.github.io//images/output_27_1.png"
 >
 </div>
 
